Additional fix for table alignment, Issue #413

--- a/themes/default/fileext_textmode/screen.css
+++ b/themes/default/fileext_textmode/screen.css
@@ -25,7 +25,7 @@
 
 
 #FileExtTextModeDiv tbody td{
-	width: 50%;
+	width: 184px;
     padding: 0;
 	padding-left: 8px;
 	padding-right: 8px;
